--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                    <a class="nav-link" aria-current="page" href="/gallery">Gallery</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#about">About</a>
+                  <li class="nav">
+                    <a class="nav-link" href="/about">About</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -34,9 +34,6 @@
                       <li><a class="dropdown-item" href="/Videographer">Videographer</a></li>
                       <li><a class="dropdown-item" href="/Drone Pilot">Drone Pilot</a></li>
                     </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/gallery">Gallery</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact</a>
@@ -51,14 +48,22 @@
           </nav>
           <!-- bar atas end -->
           <!-- headline start -->
-          <h1>Wellcome to  DIQITA.ID </h1> 
+          <h1 class="mt-5">Wellcome to  Diqita.id </h1> 
           <style> h1 { 
            font-family: poppins;
            font-size: 80px;
            text-align: center;
-           color: coral;
+           color: blue;
            }
-           body { background-color: lightgrey;}
+           body { 
+      background-image: url('../foto/background.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      /* display: flex; */
+      /* align-items: center; */
+      /* justify-content: center; */
+    }
            </style>
            <!-- headline end -->
             <!-- colom start -->
