--- a/Photographer/index.html
+++ b/Photographer/index.html
@@ -17,7 +17,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                    <a class="nav-link" aria-current="page" href="/gallery">Gallery</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
@@ -33,7 +33,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/gallery">gallery</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -43,8 +43,32 @@
               </div>
             </div>
           </nav>
+          <!-- bar end -->
+           <!-- css headline start -->
+          <h1 class="mt-5 mb-5">Diqita Photographer</h1> 
+          <style> h1 { 
+           font-family: poppins;
+           font-size: 50px;
+           text-align: center;
+           color: blue;
+           }
+           body { 
+      background-image: url('../foto/background.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      /* display: flex; */
+      /* align-items: center; */
+      /* justify-content: center; */
+    }
+           </style>
+           <!-- css headline end -->
           <!-- card start -->
-          <div class="card" style="width: 18rem;">
+          <div class="container text-center">
+            <!-- baris 1 -->
+            <div class="row align-items-start">
+            <div class="col mb-5">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -52,7 +76,10 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+        </div>
+
+        <div class="col">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -60,7 +87,10 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+        </div>
+
+        <div class="col">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -68,7 +98,10 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+        </div>
+
+        <div class="col">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -76,7 +109,12 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+        </div>
+      </div>
+      <!-- baris 2 -->
+      <div class="row align-items-start">   
+        <div class="col mb-5">
+        <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -84,7 +122,10 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+        </div>
+        
+        <div class="col">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -92,7 +133,10 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+        </div>
+
+        <div class="col">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -100,7 +144,10 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+        </div>
+
+          <div class="col">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -108,7 +155,12 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+        </div>
+      </div>
+          <!-- baris 3 -->
+          <div class="row align-items-start">
+          <div class="col mb-5">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -116,7 +168,10 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+        </div>
+     
+          <div class="col">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -124,7 +179,10 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+          </div>
+
+          <div class="col">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -132,7 +190,10 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
-          <div class="card" style="width: 18rem;">
+          </div>
+
+          <div class="col">
+          <div class="card border border-2 border-secondary" style="width: 18rem;">
             <img src="..." class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
@@ -140,6 +201,9 @@
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
+        </div>
+        </div>
+        </div>
           <!-- card end -->
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </body>
