--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
         <title>RIZAL - ABOUT</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light"></nav>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="/">DIQITA.ID</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +17,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                    <a class="nav-link" aria-current="page" href="/gallery/">Gallery</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
@@ -33,7 +33,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/gallery">gallery</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -44,5 +44,24 @@
             </div>
           </nav>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </body>
+    <!-- headline start -->
+    <h1 class="mt-5">About me</h1> 
+    <style> h1 { 
+     font-family: poppins;
+     font-size: 50px;
+     text-align: center;
+     color: blue;
+     }
+     body { 
+      background-image: url('../foto/background.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      /* display: flex; */
+      /* align-items: center; */
+      /* justify-content: center; */
+    }
+     </style>
+     <!-- headline end -->
+        </body>
 </html>
