--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-        <title>Rizal - GALLERY</title>
+        <title>RIZAL - GALLERY</title>
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -17,7 +17,7 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/home">Home</a>
+                    <a class="nav-link" aria-current="page" href="/gallery/">Gallery</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
@@ -33,7 +33,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/gallery">gallery</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                   </li>
                 </ul>
                 <form class="d-flex">
@@ -44,5 +44,24 @@
             </div>
           </nav>
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </body>
+    <!-- headline start -->
+    <h1 class="mt-5">My Gallery</h1> 
+    <style> h1 { 
+     font-family: poppins;
+     font-size: 50px;
+     text-align: center;
+     color: blue;
+     }
+     body { 
+      background-image: url('../foto/background.jpg');
+      background-size: cover;
+      background-position: center;
+      height: 100vh;
+      /* display: flex; */
+      /* align-items: center; */
+      /* justify-content: center; */
+    }
+     </style>
+     <!-- headline end -->
+        </body>
 </html>
