--- a/service/index.html
+++ b/service/index.html
@@ -19,9 +19,11 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/home">Home</a>
                   </li>
+                  <ul>
                   <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                   </li>
+                </ul>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       service
@@ -33,7 +35,7 @@
                     </ul>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/gallery">gallery</a>
+                    <a class="nav-link" href="/contact">Contact</a>
                   </li>
                 </ul>
                 <form class="d-flex">
