bang tampilan udah oke tapi kenaa fotonya peyang peyang ya

--- a/Drone Pilot/index.html
+++ b/Drone Pilot/index.html
@@ -8,7 +8,7 @@
         <title>Diqita Pilot Drone</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="/">DIQITA.ID</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,19 +39,19 @@
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
               </div>
             </div>
           </nav>
           <!-- bar end -->
            <!-- css headline start -->
-          <h1 class="mt-5 mb-5">Diqita Drone Pilot</h1> 
+          <h1 class="mt-5 mb-5">Our Drone Pilot</h1> 
           <style> h1 { 
            font-family: poppins;
            font-size: 50px;
            text-align: center;
-           color: blue;
+           color: whitesmoke;
            }
            body { 
       background-image: url('../foto/background.jpg');
@@ -74,7 +74,7 @@
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Booking</a>
             </div>
           </div>
         </div>
@@ -85,7 +85,7 @@
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="#" class="btn btn-primary">Pesan Sekarang</a>
             </div>
           </div>
         </div>
