--- a/Photographer/index.html
+++ b/Photographer/index.html
@@ -8,7 +8,7 @@
         <title>Diqita Photographer</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="/">DIQITA.ID</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,19 +38,19 @@
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
               </div>
             </div>
           </nav>
           <!-- bar end -->
            <!-- css headline start -->
-          <h1 class="mt-5 mb-5">Diqita Photographer</h1> 
+          <h1 class="mt-5 mb-5">Our Photographer</h1> 
           <style> h1 { 
            font-family: poppins;
            font-size: 50px;
            text-align: center;
-           color: blue;
+           color: whitesmoke;
            }
            body { 
       background-image: url('../foto/background.jpg');
