--- a/contact/index.html
+++ b/contact/index.html
@@ -8,7 +8,7 @@
         <title>RIZAL - CONTACT</title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="/">DIQITA.ID</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,30 +38,62 @@
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
               </div>
             </div>
           </nav>
+          
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <!-- headline start -->
-    <h1 class="mt-5">Contact me</h1> 
-    <style> h1 { 
-     font-family: poppins;
-     font-size: 50px;
-     text-align: center;
-     color: blue;
-     }
-     body { 
-      background-image: url('../foto/background.jpg');
-      background-size: cover;
-      background-position: center;
-      height: 100vh;
-      /* display: flex; */
-      /* align-items: center; */
-      /* justify-content: center; */
-    }
-     </style>
-     <!-- headline end -->
+ 
+     <div class="container-fliud bg-dark text-light" style="height: 100vh;">
+      <!-- carousel -->
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../carousel/carousel4.jpg" class="d-block w-100" alt="Scenora" style="height: 500px">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Scenora Parfume</h5>
+              <p>Black Diamond</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../carousel/carousel5.jpg" class="d-block w-100" alt="Scenora"  style="height: 500px">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Scenora Parfume</h5>
+              <p>Wangi dan Tahan Lama</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../carousel/carousel6.jpg" class="d-block w-100" alt="Scenora"  style="height: 500px">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Scenora Parfume</h5>
+              <p>Love Blossom</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <!-- carousel end -->
+       <div class="row text-center align-items-center">
+         <div class="col-8 mt-5">
+          <h1 style="font-family: poppins;">Our Contact</h1> 
+         </div>
+         <div class="col-4 mt-5">
+           <img url="(../)">
+         </div>
+       </div>
         </body>
 </html>
