--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
       
         <!-- Bar atas start -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">DIQITA.ID</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,42 +41,66 @@
                 </ul>
                 <form class="d-flex">
                   <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
+                  <button class="btn btn-outline-light" type="submit">Search</button>
                 </form>
               </div>
             </div>
           </nav>
           <!-- bar atas end -->
           <!-- headline start -->
-          <h1 class="mt-5">Wellcome to  Diqita.id </h1> 
-          <style> h1 { 
-           font-family: poppins;
-           font-size: 80px;
-           text-align: center;
-           color: blue;
-           }
-           body { 
-      background-image: url('../foto/background.jpg');
-      background-size: cover;
-      background-position: center;
-      height: 100vh;
-      /* display: flex; */
-      /* align-items: center; */
-      /* justify-content: center; */
-    }
+          
            </style>
            <!-- headline end -->
             <!-- colom start -->
-          <div class="container-fliud bg-dark text-light">
-            <div class="row align-items-center">
-              <div class="col-6 border">
-                One of three columns
-              </div>
-              <div class="col-6 border">
-                One of three columns
-              </div>
+          <div class="container-fliud bg-dark text-light" style="height: 100vh;">
+           <!-- carousel -->
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="../carousel/carousel1.jpg" class="d-block w-100" alt="Loreal" style="height: 500px">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Loreal Professionnel</h5>
+              <p>Loreal Professionnel Business Forum 2024</p>
             </div>
           </div>
+          <div class="carousel-item">
+            <img src="../carousel/carousel2.jpg" class="d-block w-100" alt="Loreal"  style="height: 500px">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Loreal Professionnel</h5>
+              <p>Loreal Professionnel Business Forum 2024</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="../carousel/carousel3.jpg" class="d-block w-100" alt="Loreal"  style="height: 500px">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Loreal Professionnel</h5>
+              <p>Loreal Professionnel Business Forum 2024</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <!-- carousel end -->
+      <div class="row text-center align-items-center">
+              <div class="col-8 mt-5">
+                <h1 style="font-family: poppins;">Hallo sobat Diqita.id</h1> 
+              </div>
+              <div class="col-4 mt-5">
+                <img url="(../)">
+              </div>
+            </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- colom end -->
 
