gw udah masukin visi misi perusahaan, tinggal gambar dan interfae service foto vidio drone

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </style>
   <!-- headline end -->
   <!-- colom start -->
-  <div class="container-fliud bg-dark text-light" style="height: 100vh;">
+  <div class="container-fliud bg-dark text-light" style="height: 1700px; width: auto;">
     <!-- carousel -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -72,7 +72,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="../carousel/carousel1.jpg" class="d-block w-100" alt="Loreal"
-              style="height: 500px; object-fit: cover;">
+              style="height: 700px; object-fit: cover;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Loreal Professionnel</h5>
               <p>Loreal Professionnel Business Forum 2024</p>
@@ -80,7 +80,7 @@
           </div>
           <div class="carousel-item">
             <img src="../carousel/carousel2.jpg" class="d-block w-100" alt="Loreal"
-              style="height: 500px; object-fit: cover;">
+              style="height: 700px; object-fit: cover;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Loreal Professionnel</h5>
               <p>Loreal Professionnel Business Forum 2024</p>
@@ -88,7 +88,7 @@
           </div>
           <div class="carousel-item">
             <img src="../carousel/carousel3.jpg" class="d-block w-100" alt="Loreal"
-              style="height: 500px; object-fit: cover;">
+              style="height: 700px; object-fit: cover;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Loreal Professionnel</h5>
               <p>Loreal Professionnel Business Forum 2024</p>
@@ -118,7 +118,11 @@
     <!-- carousel end -->
     <div class="row text-center align-items-center">
       <div class="col-8 mt-5">
-        <h1 style="font-family: poppins;">Hallo sobat Diqita.id</h1>
+        <h1 style="font-family: poppins;">Hallo sobat Diqita.id</h1><br>
+        <h5 style="row-text-left">      Diqita.id adalah perusahaan profesional yang bergerak di bidang penyediaan <br> layanan dokumentasi yang berkualitas. <br>Kami menyediakan solusi lengkap untuk kebutuhan dokumentasi, yang dirancang <br> untuk mengabadikan setiap momen berharga dengan detail dan presisi.<br><br><br>  Dengan tim ahli berpengalaman, kami melayani berbagai sektor mulai dari <br>acara event perusahaan, periklanan perusahaan, seminar, profile company<br> hingga proyek-proyek industri kreatif.<br><br><br>
+
+          Mengutamakan inovasi dan teknologi terkini, Diqita.id berkomitmen<br>untuk memberikan hasil yang memuaskan dan sesuai dengan kebutuhan klien.<br> Melalui dedikasi terhadap kualitas, kreativitas, dan pelayanan yang unggul,<br> kami terus membangun kepercayaan sebagai mitra<br> dokumentasi terpercaya di Indonesia.<br><br><br>
+          Kepercayaan klien adalah fondasi utama dari setiap layanan <br>yang kami berikan.<br> Di Diqita.id, kami percaya bahwa hubungan yang dibangun atas dasar kepercayaan <br>dan transparansi adalah kunci kesuksesan bersama.<br>Kami selalu berkomitmen untuk mendengarkan kebutuhan klien<br> dengan cermat, memberikan solusi terbaik,<br> serta menjaga integritas dalam setiap tahap pekerjaan.<br><br><br> Dengan dedikasi terhadap kualitas dan ketepatan waktu,<br> kami memastikan bahwa setiap proyek dijalankan dengan penuh tanggung jawab,<br> sehingga klien dapat mempercayakan momen-momen penting mereka <br>kepada kami tanpa ragu.</h5>
       </div>
       <div class="col-4 mt-5">
         <img url="(../)">
