--- a/contact/index.html
+++ b/contact/index.html
@@ -53,7 +53,7 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
 
-  <div class="container-fliud bg-dark text-light" style="height: 100vh;">
+  <div class="container-fliud bg-dark text-light" style="height: 1300px; width: auto;">
     <!-- carousel -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -68,7 +68,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="../carousel/carousel4.jpg" class="d-block w-100" alt="Scenora"
-              style="height: 500px; object-fit: cover;">
+              style="height: 700px; object-fit: cover;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Scenora Parfume</h5>
               <p>Black Diamond</p>
@@ -76,7 +76,7 @@
           </div>
           <div class="carousel-item">
             <img src="../carousel/carousel5.jpg" class="d-block w-100" alt="Scenora"
-              style="height: 500px; object-fit: cover;">
+              style="height: 700px; object-fit: cover;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Scenora Parfume</h5>
               <p>Wangi dan Tahan Lama</p>
@@ -84,7 +84,7 @@
           </div>
           <div class="carousel-item">
             <img src="../carousel/carousel6.jpg" class="d-block w-100" alt="Scenora"
-              style="height: 500px; object-fit: cover;">
+              style="height: 700px; object-fit: cover;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Scenora Parfume</h5>
               <p>Love Blossom</p>
@@ -114,7 +114,10 @@
     <!-- carousel end -->
     <div class="row text-center align-items-center">
       <div class="col-8 mt-5">
-        <h1 style="font-family: poppins;">Our Contact</h1>
+        <h1 style="font-family: poppins;">Our Contact</h1><br>
+        <h5 style="row-text-left mt-5">      Kami siap membantu Anda mewujudkan dokumentasi yang sempurna untuk setiap momen penting.<br> Hubungi kami sekarang untuk konsultasi lebih lanjut atau informasi mengenai<br> layanan yang kami tawarkan.<br><br><br> Tim profesional kami akan dengan senang hati menjawab setiap pertanyaan Anda dan memberikan<br> solusi yang tepat sesuai kebutuhan Anda.<br><br><br> Mari bekerja sama untuk menciptakan karya dokumentasi yang tak terlupakan!
+                <br><br><br> Wa : 0859-7531-9169 <br><br>Email : Diqita.official@gmail.com<br><br>
+        </h5>
       </div>
       <div class="col-4 mt-5">
         <img url="(../)">
