--- a/gallery/index.html
+++ b/gallery/index.html
@@ -54,7 +54,7 @@
   <!-- headline start -->
 
   <!-- headline end -->
-  <div class="container-fliud bg-dark text-light" style="height: 100vh;">
+  <div class="container-fliud bg-dark text-light" style="height: 5000px; width: auto;">
     <!-- carousel -->
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -69,7 +69,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <img src="../carousel/carousel10.JPG" class="d-block w-100" alt="Amirindo Kapal"
-              style="height: 500px; object-fit: cover;">
+              style="height: 700px; object-fit: cover;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Las Amirindo 7</h5>
               <p>Kapal Landing Craft Tank</p>
@@ -77,7 +77,7 @@
           </div>
           <div class="carousel-item">
             <img src="../carousel/carousel11.JPG" class="d-block w-100" alt="Amirindo Kapal"
-              style="height: 500px; object-fit: cover;">
+              style="height: 700px; object-fit: cover;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Las Amirindo 7</h5>
               <p>Kapal Landing Craft Tank</p>
@@ -85,7 +85,7 @@
           </div>
           <div class="carousel-item">
             <img src="../carousel/carousel12.JPG" class="d-block w-100" alt="Amirindo Kapal"
-              style="height: 500px; object-fit: cover;">
+              style="height: 700px; object-fit: cover;">
             <div class="carousel-caption d-none d-md-block">
               <h5>Las Amirindo 7</h5>
               <p>Kapal Landing Craft Tank</p>
