ane benerin tulisan ketengah sama poop up biodata dan boking

--- a/index.html
+++ b/index.html
@@ -115,23 +115,48 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <!-- carousel end -->
-    <div class="row text-center align-items-center">
-      <div class="col-8 mt-5">
-        <h1 style="font-family: poppins;">Hallo sobat Diqita.id</h1><br>
-        <h5 style="row-text-left">      Diqita.id adalah perusahaan profesional yang bergerak di bidang penyediaan <br> layanan dokumentasi yang berkualitas. <br>Kami menyediakan solusi lengkap untuk kebutuhan dokumentasi, yang dirancang <br> untuk mengabadikan setiap momen berharga dengan detail dan presisi.<br><br><br>  Dengan tim ahli berpengalaman, kami melayani berbagai sektor mulai dari <br>acara event perusahaan, periklanan perusahaan, seminar, profile company<br> hingga proyek-proyek industri kreatif.<br><br><br>
 
-          Mengutamakan inovasi dan teknologi terkini, Diqita.id berkomitmen<br>untuk memberikan hasil yang memuaskan dan sesuai dengan kebutuhan klien.<br> Melalui dedikasi terhadap kualitas, kreativitas, dan pelayanan yang unggul,<br> kami terus membangun kepercayaan sebagai mitra<br> dokumentasi terpercaya di Indonesia.<br><br><br>
-          Kepercayaan klien adalah fondasi utama dari setiap layanan <br>yang kami berikan.<br> Di Diqita.id, kami percaya bahwa hubungan yang dibangun atas dasar kepercayaan <br>dan transparansi adalah kunci kesuksesan bersama.<br>Kami selalu berkomitmen untuk mendengarkan kebutuhan klien<br> dengan cermat, memberikan solusi terbaik,<br> serta menjaga integritas dalam setiap tahap pekerjaan.<br><br><br> Dengan dedikasi terhadap kualitas dan ketepatan waktu,<br> kami memastikan bahwa setiap proyek dijalankan dengan penuh tanggung jawab,<br> sehingga klien dapat mempercayakan momen-momen penting mereka <br>kepada kami tanpa ragu.</h5>
-      </div>
-      <div class="col-4 mt-5">
-        <img url="(../)">
+    <!-- carousel end -->
+    <!-- Main Content -->
+    <div class="container my-5 text-light">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <h1 class="text-center mb-4" style="font-family: 'Poppins', sans-serif;">Hallo sobat Diqita.id</h1>
+
+          <p></p>
+
+          <h5 class="text-justify my-5">
+            Diqita.id adalah perusahaan profesional yang bergerak di bidang penyediaan layanan dokumentasi yang
+            berkualitas. Kami menyediakan solusi lengkap untuk kebutuhan dokumentasi, yang dirancang untuk mengabadikan
+            setiap momen berharga dengan detail dan presisi.
+          </h5>
+          <p></p>
+          <h5 class="text-justify my-5">
+            Dengan tim ahli berpengalaman, kami melayani berbagai sektor mulai dari acara event perusahaan, periklanan
+            perusahaan, seminar, profile company hingga proyek-proyek industri kreatif.
+          </h5>
+          <h5 class="text-justify my-5">
+            Mengutamakan inovasi dan teknologi terkini, Diqita.id berkomitmen untuk memberikan hasil yang memuaskan dan
+            sesuai dengan kebutuhan klien.
+          </h5>
+          <h5 class="text-justify my-5">
+            Kepercayaan klien adalah fondasi utama dari setiap layanan yang kami berikan. Kami percaya bahwa hubungan
+            yang dibangun atas dasar kepercayaan dan transparansi adalah kunci kesuksesan bersama.
+          </h5>
+          <h5 class="text-justify my-5">
+            Dengan dedikasi terhadap kualitas dan ketepatan waktu, kami memastikan bahwa setiap proyek dijalankan dengan
+            penuh tanggung jawab, sehingga klien dapat mempercayakan momen-momen penting mereka kepada kami tanpa ragu.
+          </h5>
+        </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"></script>
-    <!-- colom end -->
+
+
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <!-- colom end -->
 
 
 </body>
