--- a/contact/index.html
+++ b/contact/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="/">DIQITA.ID</a>
@@ -28,9 +29,7 @@
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              service
-            </a>
+              aria-expanded="false"> Service </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="/Photographer">Photographer</a></li>
               <li><a class="dropdown-item" href="/Videographer">Videographer</a></li>
@@ -49,12 +48,8 @@
     </div>
   </nav>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-
-  <div class="container-fliud bg-dark text-light" style="height: 1300px; width: auto;">
-    <!-- carousel -->
+  <!-- Carousel -->
+  <div class="container-fluid bg-dark text-light py-5">
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -64,41 +59,31 @@
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
           aria-label="Slide 3"></button>
       </div>
-      <div id="carouselExample" class="carousel slide" data-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="../carousel/carousel4.jpg" class="d-block w-100" alt="Scenora"
-              style="height: 700px; object-fit: cover;">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Scenora Parfume</h5>
-              <p>Black Diamond</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../carousel/carousel5.jpg" class="d-block w-100" alt="Scenora"
-              style="height: 700px; object-fit: cover;">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Scenora Parfume</h5>
-              <p>Wangi dan Tahan Lama</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="../carousel/carousel6.jpg" class="d-block w-100" alt="Scenora"
-              style="height: 700px; object-fit: cover;">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Scenora Parfume</h5>
-              <p>Love Blossom</p>
-            </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../carousel/carousel4.jpg" class="d-block w-100" alt="Scenora"
+            style="height: 700px; object-fit: cover;">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Scenora Parfume</h5>
+            <p>Black Diamond</p>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
+        <div class="carousel-item">
+          <img src="../carousel/carousel5.jpg" class="d-block w-100" alt="Scenora"
+            style="height: 700px; object-fit: cover;">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Scenora Parfume</h5>
+            <p>Wangi dan Tahan Lama</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../carousel/carousel6.jpg" class="d-block w-100" alt="Scenora"
+            style="height: 700px; object-fit: cover;">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Scenora Parfume</h5>
+            <p>Love Blossom</p>
+          </div>
+        </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
         data-bs-slide="prev">
@@ -111,18 +96,35 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <!-- carousel end -->
-    <div class="row text-center align-items-center">
-      <div class="col-8 mt-5">
-        <h1 style="font-family: poppins;">Our Contact</h1><br>
-        <h5 style="row-text-left mt-5">      Kami siap membantu Anda mewujudkan dokumentasi yang sempurna untuk setiap momen penting.<br> Hubungi kami sekarang untuk konsultasi lebih lanjut atau informasi mengenai<br> layanan yang kami tawarkan.<br><br><br> Tim profesional kami akan dengan senang hati menjawab setiap pertanyaan Anda dan memberikan<br> solusi yang tepat sesuai kebutuhan Anda.<br><br><br> Mari bekerja sama untuk menciptakan karya dokumentasi yang tak terlupakan!
-                <br><br><br> Wa : 0859-7531-9169 <br><br>Email : Diqita.official@gmail.com<br><br>
-        </h5>
-      </div>
-      <div class="col-4 mt-5">
-        <img url="(../)">
-      </div>
+  </div>
+
+  <!-- Contact Information -->
+  <!-- Contact Information -->
+  <div class="container py-5 bg-dark text-light mt-5 mb-5"> <!-- Menambahkan bg-dark -->
+    <div class="row align-items-center text-center text-md-start">
+
+      <h1 class="mb-4 text-center mt-3" style="font-family: 'Poppins', sans-serif;">Our Contact</h1>
+      <p class="lead mt-3">
+        Kami siap membantu Anda mewujudkan dokumentasi yang sempurna untuk setiap momen penting. Hubungi kami sekarang
+        untuk konsultasi lebih lanjut atau informasi mengenai layanan yang kami tawarkan.
+      </p>
+      <p class="lead mt-3">
+        Tim profesional kami akan dengan senang hati menjawab setiap pertanyaan Anda dan memberikan solusi yang tepat
+        sesuai kebutuhan Anda.
+      </p>
+      <p class="lead mt-3">
+        <strong>Wa:</strong> 0859-7531-9169 <br>
+        <strong>Email:</strong> Diqita.official@gmail.com
+      </p>
+
+
     </div>
+  </div>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
