--- a/Photographer/index.html
+++ b/Photographer/index.html
@@ -80,11 +80,11 @@
           <div class="card-body">
             <h5 class="card-title">Oryza sativa</h5>
             <p class="card-text">Photographer Depok<br>Start from 800.000 per day</p>
-
-            <a type="button" class="btn 
- btn-primary " data-bs-toggle="modal" data-bs-target="#biodataModal1">
-              BIODATA
-            </a>
+            
+            <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1CiBPnsWBgYs3HaJG-xaRrpiqDKZ9E7g9?usp=sharing" target="_blank">
+              Our Portfolio
+          </a>
+        
 
             <div class="modal fade" id="biodataModal1" tabindex="-1" aria-labelledby="biodataModalLabel"
               aria-hidden="true">
